--- a/sword-conf/pom.xml
+++ b/sword-conf/pom.xml
@@ -53,6 +53,7 @@
 			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-common</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.101tec/zkclient -->
@@ -60,6 +61,7 @@
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
 			<version>0.10</version>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
