T-Right队列模块代码提交

--- a/sword-data-rqueue/pom.xml
+++ b/sword-data-rqueue/pom.xml
@@ -51,6 +51,16 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-common</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 </project>
