--- a/sword-netty/pom.xml
+++ b/sword-netty/pom.xml
@@ -53,12 +53,7 @@
 			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-common</artifactId>
 			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>4.3.2.RELEASE</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -71,13 +66,14 @@
 			<groupId>org.jboss.marshalling</groupId>
 			<artifactId>jboss-marshalling-serial</artifactId>
 			<version>2.0.5.Final</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.marshalling</groupId>
 			<artifactId>jboss-marshalling</artifactId>
 			<version>2.0.5.Final</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
