--- a/sword-data/pom.xml
+++ b/sword-data/pom.xml
@@ -50,7 +50,12 @@
 
 
 	<dependencies>
-
+		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-common</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 </project>
