--- a/sword-data-rqueue/pom.xml
+++ b/sword-data-rqueue/pom.xml
@@ -57,6 +57,12 @@
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>RELEASE</version>
+			<scope>provided</scope>
+		</dependency>
 
 
 	</dependencies>
