--- a/sword-data-lqueue/pom.xml
+++ b/sword-data-lqueue/pom.xml
@@ -56,6 +56,11 @@
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
 </project>
