增加id generator模块 重构salve replicator模块

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
 	<modules>
 		<module>sword-common</module>
+		<module>sword-id-generator</module>
 		<module>sword-netty</module>
 		<module>sword-redis</module>
 		<module>sword-metadata</module>
