--- a/sword-redis-slave/pom.xml
+++ b/sword-redis-slave/pom.xml
@@ -70,6 +70,17 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-id-generator</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
