--- a/sword-data-bridge/pom.xml
+++ b/sword-data-bridge/pom.xml
@@ -44,21 +44,15 @@
 		<relativePath>../</relativePath>
 	</parent>
 
-	<artifactId>sword-data-lqueue</artifactId>
+	<artifactId>sword-data-bridge</artifactId>
 	<packaging>jar</packaging>
-	<name>sword-data-lqueue</name>
+	<name>sword-data-bridge</name>
 
 
 	<dependencies>
 		<dependency>
 			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-common</artifactId>
-			<version>${project.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-data-bridge</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
