--- a/sword-data-rqueue/pom.xml
+++ b/sword-data-rqueue/pom.xml
@@ -58,6 +58,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-data-bridge</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>RELEASE</version>
