从common 抽出 data 公共模块

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>sword-netty</module>
 		<module>sword-redis</module>
 		<module>sword-metadata</module>
+		<module>sword-data</module>
 		<module>sword-data-bridge</module>
 		<module>sword-data-lqueue</module>
 		<module>sword-data-rqueue</module>
