--- a/sword-data-lqueue/pom.xml
+++ b/sword-data-lqueue/pom.xml
@@ -54,13 +54,16 @@
 			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-common</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-data</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-data-bridge</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
 		</dependency>
         <dependency>
             <groupId>junit</groupId>
