--- a/sword-transfer-server/pom.xml
+++ b/sword-transfer-server/pom.xml
@@ -73,9 +73,8 @@
 
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-netty</artifactId>
+			<artifactId>sword-transfer</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
