--- a/sword-transfer/pom.xml
+++ b/sword-transfer/pom.xml
@@ -44,38 +44,33 @@
 		<relativePath>../</relativePath>
 	</parent>
 
-	<artifactId>sword-transfer-client</artifactId>
+	<artifactId>sword-transfer</artifactId>
 	<packaging>jar</packaging>
-	<name>sword-transfer-client</name>
-
-
+	<name>sword-transfer</name>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-common</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-data-lqueue</artifactId>
-			<version>${project.version}</version>
-			<scope>provided</scope>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>5.0.0.Alpha2</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-metadata</artifactId>
-			<version>${project.version}</version>
-			<scope>provided</scope>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling-serial</artifactId>
+			<version>2.0.5.Final</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-netty</artifactId>
-			<version>${project.version}</version>
-			<scope>provided</scope>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling</artifactId>
+			<version>2.0.5.Final</version>
 		</dependency>
 	</dependencies>
 
