--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<module>sword-transfer-gather</module>
 		<module>sword-transfer-backup-provider</module>
 		<module>sword-transfer-backup-gather</module>
-		<module>sword-node-server</module>
+		<module>sword-zpiper-server</module>
 	</modules>
 
 	<licenses>
