测试修改获取数据 provider 模块

--- a/sword-transfer/pom.xml
+++ b/sword-transfer/pom.xml
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>5.0.0.Alpha2</version>
+			<version>5.0.0.Alpha1</version>
 		</dependency>
 
 		<dependency>
@@ -71,6 +71,11 @@
 			<groupId>org.jboss.marshalling</groupId>
 			<artifactId>jboss-marshalling</artifactId>
 			<version>2.0.5.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>RELEASE</version>
 		</dependency>
 	</dependencies>
 
