--- a/sword-zpiper-server/src/main/resources/config/application-dwd-dev.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-dwd-dev.properties
@@ -1,45 +1,22 @@
-app.code=user-visit-gw-service
-env=dwd-dev
-server.port=12820
-logging.config=classpath:log4j2.xml
+#放在启动参数中
+node.id.type=DC_UNIT_PIPER
+node.id.dc.name=hz
+node.id.unit.category.name=units
+node.id.unit.name=unit1
+node.id.server.name=piperName
 
-dubbo.common.zk=192.168.11.29:2185?backup=192.168.11.32:2185,192.168.11.20:2185
-dubbo.zk=192.168.11.29:2181?backup=192.168.11.32:2181,192.168.11.20:2181
-dubbo.gw.zk=192.168.11.29:2281?backup=192.168.11.32:2281,192.168.11.20:2281
-dubbo.base.zk=192.168.11.29:2285?backup=192.168.11.32:2285,192.168.11.20:2285
-dubbo.protocol.port=12821
-dubbo.service.version=1.0.0
+zk.connect.address=localhost:2181
+zk.connect.timeout=1000
 
-spring.datasource.user.visit.url=jdbc:mysql://rm-bp188fb70hknd9gi2o.mysql.rds.aliyuncs.com:3306/user_visit?useUnicode=true&amp;characterEncoding=utf8&amp;zeroDateTimeBehavior=convertToNull
-spring.datasource.user.visit.username=devuser
-spring.datasource.user.visit.password=Devuser123
-spring.datasource.user.visit.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.user.visit.max-wait=5000
-spring.datasource.user.visit.max-active=100
-spring.datasource.user.visit.test-on-borrow=true
-spring.datasource.user.visit.timeBetweenEvictionRunsMillis = 3600000
-spring.datasource.user.visit.validationQuery = SELECT 1
-spring.datasource.user.visit.jmxEnabled=true
-spring.datasource.user.visit.jdbcInterceptors=SlowQueryReport(threshold=100)
-spring.datasource.user.visit.logValidationErrors=true
+#以后会放到zk中
+data.right.queue.file.path=E:\\sword\\right\\data
+data.right.queue.index.file.path=E:\\sword\\right\\index
 
-spring.datasource.slave.user.visit.url=jdbc:mysql://rm-bp188fb70hknd9gi2o.mysql.rds.aliyuncs.com:3306/user_visit?useUnicode=true&amp;characterEncoding=utf8&amp;zeroDateTimeBehavior=convertToNull
-spring.datasource.slave.user.visit.username=devuser
-spring.datasource.slave.user.visit.password=Devuser123
-spring.datasource.slave.user.visit.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.slave.user.visit.max-wait=5000
-spring.datasource.slave.user.visit.max-active=100
-spring.datasource.slave.user.visit.test-on-borrow=true
-spring.datasource.slave.user.visit.timeBetweenEvictionRunsMillis = 3600000
-spring.datasource.slave.user.visit.validationQuery = SELECT 1
-spring.datasource.slave.user.visit.jmxEnabled=true
-spring.datasource.slave.user.visit.jdbcInterceptors=SlowQueryReport(threshold=100)
-spring.datasource.slave.user.visit.logValidationErrors=true
+data.left.queue.file.path=E:\\sword\\left\\data
 
-mybatis.user.visit.mapper-locations=classpath*:mapper-user-visit/*Mapper*.xml
+redis.replicator.work.id=0
+redis.replicator.datacenter.id=0
+redis.replicator.redis.uri=redis://127.0.0.1:6379
 
-rule.server.address=192.168.1.146:12505
-
-#开关
-switch.config.zkUrl = 192.168.11.29:2185,192.168.11.32:2185,192.168.11.20:2185
-switch.config.port = 12822
+transfer.provider.bind.port=8025
+transfer.backup.provider.bind.port=8025
