--- a/sword-redis-replicator/pom.xml
+++ b/sword-redis-replicator/pom.xml
@@ -54,7 +54,12 @@
 			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-common</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-redis</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
