--- a/sword-redis-writer/pom.xml
+++ b/sword-redis-writer/pom.xml
@@ -54,13 +54,16 @@
 			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-common</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-redis</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-data-lqueue</artifactId>
 			<version>${project.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
 		<dependency>
