--- a/sword-zpiper-server/src/main/resources/config/application-dwd-pre.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-dwd-pre.properties
@@ -1,45 +1,22 @@
-app.code=user-visit-gw-service
-env=dwd-pre
-server.port=12820
-logging.config=classpath:log4j2.xml
+#放在启动参数中
+node.id.type=DC_UNIT_PIPER
+node.id.dc.name=hz
+node.id.unit.category.name=units
+node.id.unit.name=unit1
+node.id.group.name=piperName
 
-dubbo.common.zk=172.24.0.6:2185?backup=172.24.0.7:2185,172.24.0.8:2185
-dubbo.zk=172.24.0.6:2186?backup=172.24.0.7:2186,172.24.0.8:2186
-dubbo.gw.zk=172.24.1.11:2381?backup=172.24.1.12:2381,172.24.1.13:2381
-dubbo.base.zk=172.24.1.11:2481?backup=172.24.1.12:2481,172.24.1.13:2481
-dubbo.protocol.port=12821
-dubbo.service.version=1.0.0
+zk.connect.address=localhost:2181
+zk.connect.timeout=1000
 
-spring.datasource.user.visit.url=jdbc:mysql://rm-bp19u92066zkf0za5.mysql.rds.aliyuncs.com:3306/user_visit?useUnicode=true&amp;characterEncoding=utf8&amp;zeroDateTimeBehavior=convertToNull
-spring.datasource.user.visit.username=user_visit
-spring.datasource.user.visit.password=FwcwyRQ3GXDBG8uI
-spring.datasource.user.visit.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.user.visit.max-wait=5000
-spring.datasource.user.visit.max-active=100
-spring.datasource.user.visit.test-on-borrow=true
-spring.datasource.user.visit.timeBetweenEvictionRunsMillis = 3600000
-spring.datasource.user.visit.validationQuery = SELECT 1
-spring.datasource.user.visit.jmxEnabled=true
-spring.datasource.user.visit.jdbcInterceptors=SlowQueryReport(threshold=100)
-spring.datasource.user.visit.logValidationErrors=true
+#以后会放到zk中
+data.right.queue.file.path=E:\\sword\\right\\data
+data.right.queue.index.file.path=E:\\sword\\right\\index
 
-spring.datasource.slave.user.visit.url=jdbc:mysql://rr-bp120wtm94t9c5v43.mysql.rds.aliyuncs.com:3306/user_visit?useUnicode=true&amp;characterEncoding=utf8&amp;zeroDateTimeBehavior=convertToNull
-spring.datasource.slave.user.visit.username=user_visit
-spring.datasource.slave.user.visit.password=FwcwyRQ3GXDBG8uI
-spring.datasource.slave.user.visit.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.slave.user.visit.max-wait=5000
-spring.datasource.slave.user.visit.max-active=100
-spring.datasource.slave.user.visit.test-on-borrow=true
-spring.datasource.slave.user.visit.timeBetweenEvictionRunsMillis = 3600000
-spring.datasource.slave.user.visit.validationQuery = SELECT 1
-spring.datasource.slave.user.visit.jmxEnabled=true
-spring.datasource.slave.user.visit.jdbcInterceptors=SlowQueryReport(threshold=100)
-spring.datasource.slave.user.visit.logValidationErrors=true
+data.left.queue.file.path=E:\\sword\\left\\data
 
-mybatis.user.visit.mapper-locations=classpath*:mapper-user-visit/*Mapper*.xml
+redis.replicator.work.id=0
+redis.replicator.datacenter.id=0
+redis.replicator.redis.uri=redis://127.0.0.1:6379
 
-rule.server.address=172.24.146.42:12505
-
-#开关
-switch.config.zkUrl = 172.24.0.6:2185,172.24.0.7:2185,172.24.0.8:2185
-switch.config.port = 12822
+transfer.provider.bind.port=8025
+transfer.backup.provider.bind.port=8025
