--- a/sword-zpiper-server/src/main/resources/config/application.properties
+++ b/sword-zpiper-server/src/main/resources/config/application.properties
@@ -3,7 +3,7 @@ node.id.type=DC_UNIT_PIPER
 node.id.dc.name=hz
 node.id.unit.category.name=units
 node.id.unit.name=unit1
-node.id.server.name=piperName
+node.id.group.name=piperName
 
 zk.connect.address=localhost:2181
 zk.connect.timeout=100
