--- a/sword-zpiper-server/src/main/resources/config/application-dwd-qa3.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-dwd-qa3.properties
@@ -1,46 +1,22 @@
-app.code=user-visit-gw-service
-env=dwd-qa3
-server.port=12820
-logging.config=classpath:log4j2.xml
+#放在启动参数中
+node.id.type=DC_UNIT_PIPER
+node.id.dc.name=hz
+node.id.unit.category.name=units
+node.id.unit.name=unit1
+node.id.group.name=piperName
 
-dubbo.common.zk=172.24.64.79:2185?backup=172.24.64.80:2185,172.24.64.81:2185
-dubbo.zk=172.24.64.79:2181?backup=172.24.64.80:2181,172.24.64.81:2181
-dubbo.gw.zk=172.24.64.79:2281?backup=172.24.64.80:2281,172.24.64.81:2281
-dubbo.base.zk=172.24.64.79:2285?backup=172.24.64.80:2285,172.24.64.81:2285
-dubbo.protocol.port=12821
-dubbo.service.version=1.0.0
+zk.connect.address=localhost:2181
+zk.connect.timeout=1000
 
-spring.datasource.user.visit.url=jdbc:mysql://rm-bp1am0r5x8qr8z708.mysql.rds.aliyuncs.com:3306/user_visit?useUnicode=true&amp;characterEncoding=utf8&amp;zeroDateTimeBehavior=convertToNull
-spring.datasource.user.visit.username=qauser
-spring.datasource.user.visit.password=Qauser123
-spring.datasource.user.visit.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.user.visit.max-wait=5000
-spring.datasource.user.visit.max-active=100
-spring.datasource.user.visit.test-on-borrow=true
-spring.datasource.user.visit.timeBetweenEvictionRunsMillis = 3600000
-spring.datasource.user.visit.validationQuery = SELECT 1
-spring.datasource.user.visit.jmxEnabled=true
-spring.datasource.user.visit.jdbcInterceptors=SlowQueryReport(threshold=100)
-spring.datasource.user.visit.logValidationErrors=true
+#以后会放到zk中
+data.right.queue.file.path=E:\\sword\\right\\data
+data.right.queue.index.file.path=E:\\sword\\right\\index
 
-spring.datasource.slave.user.visit.url=jdbc:mysql://rm-bp1am0r5x8qr8z708.mysql.rds.aliyuncs.com:3306/user_visit?useUnicode=true&amp;characterEncoding=utf8&amp;zeroDateTimeBehavior=convertToNull
-spring.datasource.slave.user.visit.username=qauser
-spring.datasource.slave.user.visit.password=Qauser123
-spring.datasource.slave.user.visit.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.slave.user.visit.max-wait=5000
-spring.datasource.slave.user.visit.max-active=100
-spring.datasource.slave.user.visit.test-on-borrow=true
-spring.datasource.slave.user.visit.timeBetweenEvictionRunsMillis = 3600000
-spring.datasource.slave.user.visit.validationQuery = SELECT 1
-spring.datasource.slave.user.visit.jmxEnabled=true
-spring.datasource.slave.user.visit.jdbcInterceptors=SlowQueryReport(threshold=100)
-spring.datasource.slave.user.visit.logValidationErrors=true
+data.left.queue.file.path=E:\\sword\\left\\data
 
+redis.replicator.work.id=0
+redis.replicator.datacenter.id=0
+redis.replicator.redis.uri=redis://127.0.0.1:6379
 
-mybatis.user.visit.mapper-locations=classpath*:mapper-user-visit/*Mapper*.xml
-
-rule.server.address=172.24.64.149:12505
-
-#开关
-switch.config.zkUrl = 172.24.64.79:2185,172.24.64.80:2185,172.24.64.81:2185
-switch.config.port = 12822
+transfer.provider.bind.port=8025
+transfer.backup.provider.bind.port=8025
