--- a/sword-metadata/pom.xml
+++ b/sword-metadata/pom.xml
@@ -61,7 +61,12 @@
 			<artifactId>zkclient</artifactId>
 			<version>0.10</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 </project>
