--- a/sword-metadata/pom.xml
+++ b/sword-metadata/pom.xml
@@ -55,6 +55,13 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.5</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.101tec/zkclient -->
 		<dependency>
 			<groupId>com.101tec</groupId>
