--- a/sword-zpiper-server/src/main/resources/config/application-dwd-dev.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-dwd-dev.properties
@@ -1,8 +1,9 @@
+server.port=8078
 #放在启动参数中
 node.id.type=DC_UNIT_PIPER
 node.id.dc.name=hz
 node.id.unit.category.name=units
-node.id.unit.name=unit1
+node.id.unit.name=unit2
 node.id.group.name=piperName
 
 zk.connect.address=localhost:2181
@@ -18,5 +19,5 @@ redis.replicator.work.id=0
 redis.replicator.datacenter.id=0
 redis.replicator.redis.uri=redis://127.0.0.1:6379
 
-transfer.provider.bind.port=8025
-transfer.backup.provider.bind.port=8025
+transfer.provider.bind.port=8035
+transfer.backup.provider.bind.port=8035
