主从备份模块修改

--- a/sword-transfer-backup-gather/pom.xml
+++ b/sword-transfer-backup-gather/pom.xml
@@ -80,7 +80,7 @@
 
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-netty</artifactId>
+			<artifactId>sword-transfer</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
