--- a/sword-transfer-backup-provider/pom.xml
+++ b/sword-transfer-backup-provider/pom.xml
@@ -58,7 +58,7 @@
 
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-data-lqueue</artifactId>
+			<artifactId>sword-data-queue</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
