--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,14 @@
 
 	<modules>
 		<module>sword-common</module>
+		<module>sword-tasks</module>
 		<module>sword-id-generator</module>
 		<module>sword-redis</module>
 		<module>sword-metadata</module>
 		<module>sword-data</module>
+		<module>sword-data-io</module>
 		<module>sword-data-bridge</module>
-		<module>sword-data-lqueue</module>
+		<module>sword-data-queue</module>
 		<module>sword-data-rqueue</module>
 		<module>sword-redis-writer</module>
 		<module>sword-redis-replicator</module>
