--- a/sword-data-swdmq/pom.xml
+++ b/sword-data-swdmq/pom.xml
@@ -44,47 +44,35 @@
 		<relativePath>../</relativePath>
 	</parent>
 
-	<artifactId>sword-redis-replicator</artifactId>
+	<artifactId>sword-data-swdmq</artifactId>
 	<packaging>jar</packaging>
-	<name>sword-redis-replicator</name>
+	<name>sword-data-swdmq</name>
 
 
 	<dependencies>
+
 		<dependency>
 			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-redis</artifactId>
+			<artifactId>sword-data</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>com.moilioncircle</groupId>
-			<artifactId>redis-replicator</artifactId>
-			<version>3.0.0-RC3</version>
-		</dependency>
-
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-data-swdmq</artifactId>
+			<artifactId>sword-data-bridge</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-id-generator</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>RELEASE</version>
+			<scope>provided</scope>
 		</dependency>
+
 
 	</dependencies>
 
