--- a/sword-network-rpc/pom.xml
+++ b/sword-network-rpc/pom.xml
@@ -44,11 +44,10 @@
 		<relativePath>../</relativePath>
 	</parent>
 
-	<artifactId>sword-redis-replicator</artifactId>
+	<artifactId>sword-network-rpc</artifactId>
 	<packaging>jar</packaging>
-	<name>sword-redis-replicator</name>
-
-
+	<name>sword-network-rpc</name>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.zq.sword</groupId>
@@ -57,35 +56,27 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-redis</artifactId>
-			<version>${project.version}</version>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>5.0.0.Alpha1</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.moilioncircle</groupId>
-			<artifactId>redis-replicator</artifactId>
-			<version>3.0.0-RC3</version>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling-serial</artifactId>
+			<version>2.0.5.Final</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-data-swdmq</artifactId>
-			<version>${project.version}</version>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling</artifactId>
+			<version>2.0.5.Final</version>
 		</dependency>
-
-		<dependency>
-			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-id-generator</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>RELEASE</version>
 		</dependency>
-
 	</dependencies>
 
 </project>
