--- a/sword-transfer-backup-provider/pom.xml
+++ b/sword-transfer-backup-provider/pom.xml
@@ -64,7 +64,7 @@
 
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-data-rqueue</artifactId>
+			<artifactId>sword-data-swdmq</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
