data-queue 更改为 data-structure

--- a/sword-redis-writer/pom.xml
+++ b/sword-redis-writer/pom.xml
@@ -62,7 +62,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-data-queue</artifactId>
+			<artifactId>sword-data-structure</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
