--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<module>sword-data</module>
 		<module>sword-stream-io</module>
 		<module>sword-data-bridge</module>
-		<module>sword-data-queue</module>
+		<module>sword-data-structure</module>
 		<module>sword-data-swdmq</module>
 		<module>sword-redis-writer</module>
 		<module>sword-redis-replicator</module>
