--- a/sword-data-structure/pom.xml
+++ b/sword-data-structure/pom.xml
@@ -44,9 +44,9 @@
 		<relativePath>../</relativePath>
 	</parent>
 
-	<artifactId>sword-data-queue</artifactId>
+	<artifactId>sword-data-structure</artifactId>
 	<packaging>jar</packaging>
-	<name>sword-data-queue</name>
+	<name>sword-data-structure</name>
 
 
 	<dependencies>
