--- a/sword-transfer-backup-gather/pom.xml
+++ b/sword-transfer-backup-gather/pom.xml
@@ -66,7 +66,7 @@
 
 		<dependency>
 			<groupId>com.zq.sword</groupId>
-			<artifactId>sword-data-swdmq</artifactId>
+			<artifactId>sword-mq-jade</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
