--- a/sword-mq-jade/pom.xml
+++ b/sword-mq-jade/pom.xml
@@ -63,6 +63,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-network-rpc</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-data</artifactId>
 			<version>${project.version}</version>
 		</dependency>
