redis replicator 代码重构

--- a/sword-redis/pom.xml
+++ b/sword-redis/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>sword-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-data</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
