redis replicator 代码重构

--- a/sword-redis/pom.xml
+++ b/sword-redis/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>com.zq.sword</groupId>
             <artifactId>sword-stream-io</artifactId>
-            <version>0.0.1</version>
+			<version>${project.version}</version>
         </dependency>
     </dependencies>
 
