--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>sword-id-generator</module>
 		<module>sword-redis</module>
 		<module>sword-metadata</module>
+		<module>sword-config-lemna</module>
 		<module>sword-stream-io</module>
 		<module>sword-data-bridge</module>
 		<module>sword-data-structure</module>
