--- a/sword-redis/pom.xml
+++ b/sword-redis/pom.xml
@@ -55,11 +55,23 @@
 			<artifactId>sword-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-data-structure</artifactId>
+			<version>${project.version}</version>
+		</dependency>
         <dependency>
             <groupId>com.zq.sword</groupId>
             <artifactId>sword-stream-io</artifactId>
 			<version>${project.version}</version>
         </dependency>
+
+		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
     </dependencies>
 
 </project>
