piper proxypiper 完善

--- a/sword-zpiper-server/pom.xml
+++ b/sword-zpiper-server/pom.xml
@@ -87,6 +87,12 @@
 
 		<dependency>
 			<groupId>com.zq.sword</groupId>
+			<artifactId>sword-config-lemna</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.zq.sword</groupId>
 			<artifactId>sword-redis-replicator</artifactId>
 			<version>${project.version}</version>
 		</dependency>
