--- a/sword-zpiper-server/src/main/resources/config/application-dwd-qa3.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-dwd-qa3.properties
@@ -1,22 +1,17 @@
 #放在启动参数中
-node.id.type=DC_UNIT_PIPER
-node.id.dc.name=hz
-node.id.unit.category.name=units
-node.id.unit.name=unit1
-node.id.group.name=piperName
+piper.type=DC_UNIT_PIPER
+piper.dc.name=hz
+piper.unit.category=units
+piper.unit=unit1
+piper.group=piperName
 
-zk.connect.address=localhost:2181
-zk.connect.timeout=1000
+piper.zk.connect.address=localhost:2181
+
+piper.bind.port=8025
+
+piper.redis.uri=redis://127.0.0.1:6379
+
+piper.other.dc.zk.locations=redis://127.0.0.1:6379
 
 #以后会放到zk中
-data.right.queue.file.path=E:\\sword\\right\\data
-data.right.queue.index.file.path=E:\\sword\\right\\index
-
-data.left.queue.file.path=E:\\sword\\left\\data
-
-redis.replicator.work.id=0
-redis.replicator.datacenter.id=0
-redis.replicator.redis.uri=redis://127.0.0.1:6379
-
-transfer.provider.bind.port=8025
-transfer.backup.provider.bind.port=8025
+msg.resource.location=E:\\piper\\right\\data
