--- a/sword-zpiper-server/src/main/resources/config/application.properties
+++ b/sword-zpiper-server/src/main/resources/config/application.properties
@@ -3,7 +3,7 @@ piper.type=DC_UNIT_PIPER
 piper.dc.name=hz
 piper.unit.category=units
 piper.unit=unit1
-piper.group=piperName
+piper.group=businesscenter
 
 piper.zk.connect.address=localhost:2181
 
