--- a/sword-zpiper-server/src/main/resources/config/application-dwd-dev.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-dwd-dev.properties
@@ -2,16 +2,18 @@
 piper.type=DC_UNIT_PIPER
 piper.dc.name=hz
 piper.unit.category=units
-piper.unit=unit1
+piper.unit=unit2
 piper.group=businesscenter
 
 piper.zk.connect.address=localhost:2181
 
-piper.bind.port=8025
+piper.bind.port=8035
 
-piper.redis.uri=redis://127.0.0.1:6379
+server.port=8085
 
-piper.other.dc.zk.locations=redis://127.0.0.1:6379
+piper.redis.uri=redis://127.0.0.1:6378
+
+piper.other.dc.zk.locations=localhost:2181
 
 #以后会放到zk中
-msg.resource.location=E:\\piper\\right\\data
+msg.resource.location=E:\\piper\\unit2\\data
