--- a/sword-zpiper-server/src/main/resources/config/application.properties
+++ b/sword-zpiper-server/src/main/resources/config/application.properties
@@ -5,6 +5,8 @@ piper.unit.category=units
 piper.unit=unit1
 piper.group=businesscenter
 
+server.port=8090
+
 piper.zk.connect.address=localhost:2181
 
 piper.bind.port=8025
@@ -14,4 +16,4 @@ piper.redis.uri=redis://127.0.0.1:6379
 piper.other.dc.zk.locations=redis://127.0.0.1:6379
 
 #以后会放到zk中
-msg.resource.location=E:\\piper\\right\\data
+msg.resource.location=E:\\piper\\unit1\\data
