--- a/sword-zpiper-server/src/main/resources/config/application-sh-unit2.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-sh-unit2.properties
@@ -1,19 +1,17 @@
 #放在启动参数中
 piper.type=SIMPLE
-piper.dc.name=hz
+piper.dc.name=sh
 piper.unit.category=units
 piper.unit=unit2
 piper.group=businesscenter
 
-piper.zk.connect.address=localhost:2181
+piper.zk.connect.address=localhost:2182
 
 piper.bind.port=8035
 
 server.port=8085
 
 piper.redis.uri=redis://127.0.0.1:6378
-
-piper.other.dc.zk.locations=localhost:2181
 
 #以后会放到zk中
 msg.resource.location=E:\\piper\\unit2\\data
