增加分段索引文件

--- a/sword-zpiper-server/src/main/resources/config/application-hz-proxy.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-hz-proxy.properties
@@ -14,4 +14,4 @@ server.port=8099
 piper.other.dc.zk.locations=sh|localhost:2182
 
 #以后会放到zk中
-msg.resource.location=E:\\piper\\sh-proxy\\data
+msg.resource.location=E:\\piper\\sh\\proxy\\data
