--- a/sword-zpiper-server/src/main/resources/config/application-sh-unit1.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-sh-unit1.properties
@@ -1,17 +1,17 @@
 #放在启动参数中
 piper.type=SIMPLE
-piper.dc.name=hz
+piper.dc.name=sh
 piper.unit.category=units
 piper.unit=unit1
 piper.group=businesscenter
 
-server.port=8090
+piper.zk.connect.address=localhost:2182
 
-piper.zk.connect.address=localhost:2181
+piper.bind.port=8036
 
-piper.bind.port=8025
+server.port=8086
 
 piper.redis.uri=redis://127.0.0.1:6379
 
 #以后会放到zk中
-msg.resource.location=E:\\piper\\hz\\unit1\\data
+msg.resource.location=E:\\piper\\sh\\unit1\\data
