--- a/sword-zpiper-server/src/main/resources/config/application-sh-unit2.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-sh-unit2.properties
@@ -14,4 +14,4 @@ server.port=8085
 piper.redis.uri=redis://127.0.0.1:6378
 
 #以后会放到zk中
-msg.resource.location=E:\\piper\\unit2\\data
+msg.resource.location=E:\\piper\\sh\\unit2\\data
