--- a/sword-zpiper-server/src/main/resources/config/application-sh-proxy.properties
+++ b/sword-zpiper-server/src/main/resources/config/application-sh-proxy.properties
@@ -14,4 +14,4 @@ server.port=8099
 piper.other.dc.zk.locations=hz|localhost:2181
 
 #以后会放到zk中
-msg.resource.location=E:\\piper\\sh-proxy\\data
+msg.resource.location=E:\\piper\\sh\\proxy\\data
